2 drop down with subplot for histogram and subplot for correlation scatter plot
