# api/data_explorer/controllers/facets_controller.py
@@ -4,14 +4,17 @@ from data_explorer.models.facets_response import FacetsResponse
 from elasticsearch_dsl import HistogramFacet
 from elasticsearch import Elasticsearch
 from elasticsearch_dsl import Search, Q
-
 from flask import current_app
-
+from sklearn.feature_selection import SelectKBest
+from sklearn.feature_selection import chi2
+import numpy as np
+from scipy import stats
 from ..dataset_faceted_search import DatasetFacetedSearch
 import urllib
+import pandas as pd
 
 
-def facets_get(filter=None, plot="Age"):  # noqa: E501
+def facets_get(filter=None, plot="Age", plot2="Age"):  # noqa: E501
     """facets_get
 
     Returns facets. # noqa: E501
@@ -21,36 +24,120 @@ def facets_get(filter=None, plot="Age"):  # noqa: E501
 
     :rtype: FacetsResponse
     """
+    print('called facets_controller')
     client = Elasticsearch(current_app.config['ELASTICSEARCH_URL'])
     request = Search(index='project_baseline').using(client)
-    request = request[0:2000]
+    request = request[0:30]
     es_response = request.execute()
-    print('-----------')
-    print(plot)
-    es_field_name = current_app.config['ELASTICSEARCH_FACETS'][plot]._params['field'].split('.keyword')[0]
-    print(es_field_name)
-    all_weights = []
+    datak = {}
+
+    participants = []
     for hit in es_response['hits']['hits']:
         p = hit.to_dict()
-        try:
-            all_weights.append(p['_source'][es_field_name])
-        except:
-            continue
+        participants.append(p['_id'])
+
+    facets = []
+    for name, description in current_app.config['UI_FACETS'].iteritems():
+        facets.append(name)
+
+    all_data = pd.DataFrame(index=participants, columns=facets)
+
+    for hit in es_response['hits']['hits']:
+        p = hit.to_dict()
+        participant_id = p['_id']
+        for name, description in current_app.config['UI_FACETS'].iteritems():
+            try:
+                es_field_name = current_app.config['ELASTICSEARCH_FACETS'][
+                    name]._params['field'].split('.keyword')[0]
+                weight = p['_source'][es_field_name]
+                all_data.loc[all_data.index == participant_id, name] = weight
+            except:
+                continue
+    all_data = all_data.convert_objects(convert_numeric=True)
+    #
+    # all_data_with_indicators = pd.get_dummies(all_data).dropna().copy()
+    #
+    # select = SelectKBest(score_func=chi2, k='all')
+    # current_es_plot_name = current_app.config['ELASTICSEARCH_FACETS'][plot]._params[
+    #                 'field'].split('.keyword')[0]
+    # associated_var_columns = [i for i in all_data_with_indicators.columns if plot in i]
+    # use_as_correlated = associated_var_columns[0]
+    #
+    # y = all_data_with_indicators[use_as_correlated].values
+    # y = y.astype('float64')
+    #
+    # cols = all_data_with_indicators[[col for col in all_data_with_indicators.columns if col != use_as_correlated]].columns
+    #
+    # input_data = all_data_with_indicators[[col for col in all_data_with_indicators.columns if col != use_as_correlated]].values
+    # input_data = input_data.astype('float64')
+    #
+    # print(' y is ')
+    # print(y.dtype)
+    # print('input data')
+    # print(input_data.dtype)
+
+    # fit = select.fit(input_data, y)
+    # highest_correlated= cols[np.argmax(fit.scores_)]
+    # print('highest correlated')
+    # print(highest_correlated)
+
+    # for each facet, what is the best score?
+
+    for name, description in current_app.config['UI_FACETS'].iteritems():
+        es_field_name = current_app.config['ELASTICSEARCH_FACETS'][
+            name]._params['field'].split('.keyword')[0]
+        all_weights = []
+        for hit in es_response['hits']['hits']:
+            p = hit.to_dict()
+            try:
+                all_weights.append(p['_source'][es_field_name])
+            except:
+                continue
+        datak[name] = all_weights
+
+    def is_numeric(type_):
+        if (type_ == 'int64') or (type_ == 'float64'):
+            return True
+        else:
+            return False
+
+    print('type is here')
+    print(all_data[plot].dtype)
+    if is_numeric(all_data[plot].dtype) and is_numeric(all_data[plot2].dtype):
+        answer = stats.pearsonr(all_data[plot].values, all_data[plot2].values)
+        response = 'peasonr coeff for %s and %s is %0.2f' % (plot, plot2,
+                                                             answer[0])
+        print(response)
+
+    else:
+        response = 'nope: %s is type %s, %s is type %s'%(plot, is_numeric(all_data[plot].dtype), plot2, all_data[plot2].dtype)
+    print(response)
+    # test = pd.DataFrame(datak)
+    #print(test.head())
+    datak['highest_correlation'] = response
+    datak['highest_correlation_name'] = ''
+    # data_to_correlate = pd.Series(datak[plot])
+    # if data_to_correlate.dtypes == 'O':
+    #     data_to_correlate = data_to_correlate.astype('category').cat.codes
+    #
+    # for name, description in current_app.config['UI_FACETS'].iteritems():
+    #     if name != plot:
+    #         data_var2 = pd.Series(datak[name])
+    #         if data_var2.dtypes == 'O':
+    #             data_var2 = data_var2.astype('category').cat.codes
+    #         correlation = data_to_correlate.corr(data_var2)
+    #         if correlation > datak['highest_correlation']:
+    #             datak['highest_correlation'] = correlation
+    #             datak['highest_correlation_name'] = name
 
     plot_name = plot
-    # print('KB')
-    # print(plot)
-    # print(all_weights)
-    # print('in get facets now')
-    # #return FacetsResponse(facets=all_weights)
-    # print('the filter is')
-    # print(filter)
+    plot_name2 = plot2
+
     search = DatasetFacetedSearch(deserialize(filter))
     es_response = search.execute()
     es_response_facets = es_response.facets.to_dict()
     facets = []
     for name, description in current_app.config['UI_FACETS'].iteritems():
-        print(name)
         es_facet = current_app.config['ELASTICSEARCH_FACETS'][name]
         values = []
         for value_name, count, _ in es_response_facets[name]:
@@ -69,8 +156,9 @@ def facets_get(filter=None, plot="Age"):  # noqa: E501
     return FacetsResponse(
         facets=facets,
         count=es_response._faceted_search.count(),
-        datak=all_weights,
-        plot_name=plot_name)
+        datak=datak,
+        plot_name=plot_name,
+        plot_name2=plot_name2)
 
 
 def deserialize(filter_arr):
